--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -1,47 +1,3 @@
-/* ---------
-    All
---------- */
-
-.quote-button {
-    border-radius: 3500px;
-    color: white;
-    background: #182fa5;
-}
-
-/* ---------
-   Header
---------- */
-
-header {
-    background: white;
-    padding: 3% 9%;
-    font-size: 1.2rem;
-}
-
-.header-grid {
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-}
-
-.header-grid li {
-    display: inline;
-    padding: 10px 1.8%;
-}
-
-.header-grid a {
-    color: black;
-}
-
-.logo {
-    height: 80px;
-    float: left;
-    margin-bottom: 0;
-}
-
-/* ---------
-    Body
---------- */
-
 .accent {
     font-size: larger;
     color: rgb(219, 123, 94);
@@ -81,22 +37,22 @@ header {
     padding: 8px 4px;
 }
 .four-col-img1 {
-    background: url('./images/trucking-1_edited.jpg');
+    background: url('../images/trucking-1_edited.jpg');
     height: 350px;
     background-size: cover;
 }
 .four-col-img2 {
-    background: url('./images/business-3_edited.jpg');
+    background: url('../images/business-3_edited.jpg');
     height: 350px;
     background-size: cover;
 }
 .four-col-img3 {
-    background: url('./images/home-1_edited.jpg');
+    background: url('../images/home-1_edited.jpg');
     height: 350px;
     background-size: cover;
 }
 .four-col-img4 {
-    background: url('./images/trucking-3_edited.jpg');
+    background: url('../images/trucking-3_edited.jpg');
     height: 350px;
     background-size: cover;
 }
@@ -185,46 +141,4 @@ header {
     background: white;
     border: 1px solid #182fa5;
     color: #182fa5;
-}
-
-/* ---------
-   Footer
---------- */
-
-footer {
-    background: white;
-    padding: 0 11%;
-}
-
-.footer-grid {
-    display: grid;
-    grid-template-columns: 3fr 2fr 2fr 2fr;
-    padding-bottom: 50px;
-}
-
-.footer-grid h6 {
-    font-weight: bold;
-}
-
-.footer-grid li {
-    list-style-type: none;
-    text-decoration: underline;
-}
-
-.footer-grid a {
-    color: black;
-}
-
-#footer-logo {
-    height: 80px;
-}
-
-/* ---------
-Media queries
---------- */
-
-@media only screen and (max-width: 700px) {
-    .footer-grid {
-        grid-template-columns: 1fr;
-    }
 }
