--- a/styles/main.css
+++ b/styles/main.css
@@ -2,10 +2,11 @@
     All
 --------- */
 
-.quote-button {
+#quote-button {
     border-radius: 3500px;
     color: white;
     background: #182fa5;
+    padding: 10px;
 }
 
 /* ---------
@@ -25,7 +26,7 @@ header {
 
 .header-grid li {
     display: inline;
-    padding: 10px 1.8%;
+    padding: 10px 1.3%;
 }
 
 .header-grid a {
