--- a/styles/bus-ins.css
+++ b/styles/bus-ins.css
@@ -28,6 +28,20 @@
     row-gap: 4%;
 }
 
+#two-by-two div, #three-row div {
+    display: grid;
+    grid-template-columns: 1fr 7fr;
+    column-gap: 1%;
+}
+
+#two-by-two img, #three-row img {
+    max-height: 40px;
+    top: 0;
+    position: relative;
+    padding: 0;
+    margin: 0 auto;
+}
+
 #slider {
     background: #282846;
     padding: 40px 5%;
