--- a/styles/about.css
+++ b/styles/about.css
@@ -41,35 +41,73 @@
     color: #182FA5;
     border-radius: 400px 400px 0 0;
     margin: 0 20%;
+    text-align: center;
+}
+
+#partners {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    justify-content: space-between;
+    place-items: center;
+    /* width: 160px; */
+    /* grid-template-areas: "el el el el el"
+               " el el el el"; */
+}
+
+#partners img {
+    max-height: 120px;
 }
 
 .blue-block {
     margin: 2% 18%;
     background: #182FA5;
     color: white;
-}
-
-#three-circles {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
     text-align: center;
 }
 
+#three-circles {
+    display: flex;
+    /* grid-template-columns: 1fr 1fr 1fr; */
+    justify-content: space-around;
+    text-align: center;
+    margin: 0 14%;
+}
+
 .circle {
-    height: 200px;
-    width: 200px;
+    height: 210px;
+    width: 210px;
     border-radius: 100%;
     border: 2px solid #182FA5;
     color: #182FA5;
+    display: flex;
+    justify-content: center;
+    /* align-content: center; */
+    flex-direction: column;
+    font-size: 30px;
+    font-weight: 400;
+}
+
+.lt-blue {
+    background: rgb(209, 230, 236);
+}
+
+.lt-green {
+    background: rgb(215, 241, 215);
+}
+
+.yellow {
+    background: rgb(250, 235, 150);
 }
 
 .left {
     text-align: left;
-    width: 60%;
+    margin: 0 40% 0 20%;
+    padding: 20px 0;
 }
 
 .right {
     text-align: right;
-    width: 60%;
+    margin: 0 20% 0 40%;
+    padding: 10px 0;
 }
 
