--- a/styles/main.css
+++ b/styles/main.css
@@ -15,18 +15,18 @@
 
 header {
     background: white;
-    padding: 3% 9%;
+    padding: 3% 0;
     font-size: 1.2rem;
 }
 
 .header-grid {
     display: grid;
-    grid-template-columns: 2fr 3fr;
+    grid-template-columns: 1fr 2fr;
 }
 
 .header-grid li {
     display: inline;
-    padding: 10px 1.3%;
+    padding: 10px 1%;
 }
 
 .header-grid a {
@@ -50,6 +50,19 @@ header {
 
 #dropdown-content a {
     display: block;
+}
+
+#hamburger {
+    display: none;
+    height: 40px;
+    width: 40px;
+    color: black;
+    text-align: center;
+    padding: 5px;
+    margin-right: 30px;
+    border-radius: 3px;
+    border: 2px solid black;
+    font-size: 24px;
 }
 
 /* ---------
@@ -89,7 +102,19 @@ footer {
 Media queries
 --------- */
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 960px) {
+    #collapsibleNavbar {
+        display: none;
+    }
+    #hamburger {
+        display: block;
+    }
+}
+
+
+
+
+@media only screen and (max-width: 960px) {
     .footer-grid {
         grid-template-columns: 1fr;
     }
