--- a/styles/main.css
+++ b/styles/main.css
@@ -15,7 +15,7 @@
 
 header {
     background: white;
-    padding: 3% 0;
+    padding: 3% 2%;
     font-size: 1.2rem;
 }
 
@@ -35,7 +35,7 @@ header {
 
 .logo {
     height: 80px;
-    float: left;
+    /* float: left; */
     margin-bottom: 0;
 }
 
@@ -63,6 +63,7 @@ header {
     border-radius: 3px;
     border: 2px solid black;
     font-size: 24px;
+    
 }
 
 /* ---------
@@ -109,12 +110,21 @@ Media queries
     #hamburger {
         display: block;
     }
+    #header-grid {
+        grid-template-columns: 6fr 1fr 1fr;
+    }
 }
 
 
 
 
 @media only screen and (max-width: 960px) {
+    .footer-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media only screen and (max-width: 500px) {
     .footer-grid {
         grid-template-columns: 1fr;
     }
